testing with 3.8.0 RC1

--- a/fedora/test/install/install.properties
+++ b/fedora/test/install/install.properties
@@ -1,5 +1,5 @@
 #Install Options
-#Thu Sep 19 16:34:07 EDT 2013
+#Fri Aug 15 12:39:18 EDT 2014
 ri.enabled=false
 messaging.enabled=false
 apia.auth.required=false
@@ -12,6 +12,7 @@ database.username=fedoraAdmin
 fesl.authz.enabled=false
 deploy.local.services=true
 xacml.enabled=false
+tomcat.http.port=8983
 fedora.serverHost=localhost
 database=included
 database.driver=included
